; ModuleID = '/home/carl/AnghaBench/php-src/ext/opcache/jit/libudis86/extr_decode.c_decode_moffset.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/opcache/jit/libudis86/extr_decode.c_decode_moffset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ud = type { i32 }
%struct.ud_operand = type { i32, i8*, i8*, i8*, i32 }

@UD_OP_MEM = common dso_local global i32 0, align 4
@UD_NONE = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ud*, i32, %struct.ud_operand*)* @decode_moffset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @decode_moffset(%struct.ud* %0, i32 %1, %struct.ud_operand* %2) #0 {
  %4 = alloca %struct.ud*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.ud_operand*, align 8
  store %struct.ud* %0, %struct.ud** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.ud_operand* %2, %struct.ud_operand** %6, align 8
  %7 = load i32, i32* @UD_OP_MEM, align 4
  %8 = load %struct.ud_operand*, %struct.ud_operand** %6, align 8
  %9 = getelementptr inbounds %struct.ud_operand, %struct.ud_operand* %8, i32 0, i32 4
  store i32 %7, i32* %9, align 8
  %10 = load i8*, i8** @UD_NONE, align 8
  %11 = load %struct.ud_operand*, %struct.ud_operand** %6, align 8
  %12 = getelementptr inbounds %struct.ud_operand, %struct.ud_operand* %11, i32 0, i32 3
  store i8* %10, i8** %12, align 8
  %13 = load i8*, i8** @UD_NONE, align 8
  %14 = load %struct.ud_operand*, %struct.ud_operand** %6, align 8
  %15 = getelementptr inbounds %struct.ud_operand, %struct.ud_operand* %14, i32 0, i32 2
  store i8* %13, i8** %15, align 8
  %16 = load i8*, i8** @UD_NONE, align 8
  %17 = load %struct.ud_operand*, %struct.ud_operand** %6, align 8
  %18 = getelementptr inbounds %struct.ud_operand, %struct.ud_operand* %17, i32 0, i32 1
  store i8* %16, i8** %18, align 8
  %19 = load %struct.ud*, %struct.ud** %4, align 8
  %20 = load i32, i32* %5, align 4
  %21 = call i32 @resolve_operand_size(%struct.ud* %19, i32 %20)
  %22 = load %struct.ud_operand*, %struct.ud_operand** %6, align 8
  %23 = getelementptr inbounds %struct.ud_operand, %struct.ud_operand* %22, i32 0, i32 0
  store i32 %21, i32* %23, align 8
  %24 = load %struct.ud*, %struct.ud** %4, align 8
  %25 = load %struct.ud*, %struct.ud** %4, align 8
  %26 = getelementptr inbounds %struct.ud, %struct.ud* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = load %struct.ud_operand*, %struct.ud_operand** %6, align 8
  %29 = call i32 @decode_mem_disp(%struct.ud* %24, i32 %27, %struct.ud_operand* %28)
  ret void
}

declare dso_local i32 @resolve_operand_size(%struct.ud*, i32) #1

declare dso_local i32 @decode_mem_disp(%struct.ud*, i32, %struct.ud_operand*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
